# agent-workflows

./: .gitignore  .gitleaksignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DECISIONS.md  GUIDING_PRINCIPLES.md  LICENSE  Makefile  NOTICE  README.md  RELEASING.md  TODO.md  hatch_build.py  install-workflows.py  install-workflows.sh  pyproject.toml  release-review-final-checks.txt  release-review-validation-report.md  versioning.py
.agents/: README.md  local-leaks-allowlist.toml  local-leaks-hints.json.example
.agents/docs/: README.md
.agents/docs/prompts/: fix-bar.md  older-general-qaqc-prompt-library.md
.agents/docs/research/: 20260706-0000-01-cli-name-collision-research-prompt.md  20260711-2355-01-gpt56-generic-agents-source-draft.md  20260711-2355-02-gpt56-generic-guiding-principles-source-draft.md  20260712-0031-01-agent-instruction-file-discovery-survey-prompt.md  20260712-0031-01-agent-instruction-file-discovery-survey.md  20260712-2133-01-filesystem-inter-project-agent-comms-concept.md  20260714-2300-01-same-box-agent-wakeup-mechanisms.md  20260716-0850-01-opencode-unauthenticated-local-server-advisory.md  20260716-0850-02-opencode-shared-host-hardening-howto.md  20260716-0850-03-broker-feasibility-confirmation.md  20260716-1342-01-opencode-cross-user-verification-protocol.md  20260716-1342-02-opencode-cross-user-verification-agent-runbook.md  README.md
.agents/docs/roadmaps/: README.md
.agents/docs/specs/: 20260706-0000-01-pip-distribution-and-multi-repo-setup.md  20260712-2133-02-agent-comms-protocol-draft.md  20260715-1722-01-agent-comms-convention.md
.agents/docs/walkthroughs/: 20260712-1023-01-installer-shim-detection-ctrlc-and-diff-walkthrough.md  20260712-1033-01-assess-bugs-and-tests-walkthrough.md  20260712-1038-01-fix-installer-shim-tests-left-red-walkthrough.md  20260712-1041-01-agents-docs-research-and-walkthroughs-convention-walkthrough.md  20260712-1049-01-scope-review-gemini-bugs-tests-execution-walkthrough.md  20260712-1100-01-1028-falsely-marked-executed-tests-still-red-walkthrough.md  20260712-1200-01-ux-and-data-modeling-principles-import-walkthrough.md  20260712-1230-01-mirror-workflow-pointer-into-native-agent-files-walkthrough.md
.agents/plans/: README.md  STATUS.md
.agents/plans/done/: 2026-07-01-add-generalization-assess-lens.md  2026-07-01-installer-ignore-pyc-and-gitignore-backups.md  2026-07-01-installer-update-framework-files-by-default.md  2026-07-03-assess-documentation.md  2026-07-04-advise-workflow-and-personas.md  2026-07-04-assess-documentation.md  2026-07-04-command-surface-redesign.md  2026-07-04-toolkit-discovery-and-version.md  2026-07-04-verification-evidence-layer.md  2026-07-06-versioning-git-tag-semver.md
.agents/plans/executed/: 20260630-assess-documentation.md  20260701-1534-01-installer-update-framework-files-by-default.md  20260701-1644-01-installer-ignore-pyc-and-gitignore-backups.md  20260703-assess-secrets.md  20260704-1417-05-self-tests-and-assess-all.md  20260704-1941-01-assess-documentation-2.md  20260704-guided-onboarding-tour.md  20260704-lifecycle-workflows.md  20260707-pip-distribution-cli-config-wizard.md  20260708-0039-01-run-checks-windows-npm.md  20260709-2137-01-target-directory-readmes.md  20260709-2146-01-interactive-git-workflow.md  20260709-interactive-git-workflow.md  20260709-target-directory-readmes.md  20260711-0501-01-agents-tree-directory-readmes.md  20260711-0501-02-plan-filename-convention-hhmm-nn.md  20260711-0501-03-plan-lifecycle-superseded-notexecuted-dirs.md  20260711-1505-01-normalizer-fstime-fallback-and-broader-scope.md  20260711-1738-01-assess-documentation.md  20260711-1945-01-plan-status-vocabulary-and-workflow-provenance.md  20260711-2027-01-timestamp-convention-utc-to-local.md  20260711-2052-01-release-review-terminal-decision-and-ci-verify.md  20260711-2223-01-aw-plans-status-board.md  20260712-0014-01-pypi-publish-doc-links-and-version-check.md  20260712-0014-02-release-review-todo-and-pending-prompts.md  20260712-0014-03-aw-cli-ux-ctrlc-setup-and-plan-names-verb.md  20260712-0014-04-agent-brain-dir-plan-and-walkthrough-mirroring.md  20260712-1005-01-assess-tests.md  (+43 more)
.agents/workflows/: VERSION  index.md  install-workflows.py  install-workflows.sh
.claude/commands/: setup-repo.md
.github/workflows/: local-leaks.yml  secret-scan.yml  tests.yml
.opencode/commands/: plan-review.md  release-review-plan.md  release-review.md  setup-repo.md
agent_workflows/: __init__.py  __main__.py  _compat.py  cli.py  comms.py  config.py  discovery.py  engine.py  leak_sanitizer.py  leak_sanitizer_config.py  local_leaks.py  plans.py  pypi_links.py  term.py  versioning.py
docs/specs/: 2026-07-06-pip-distribution-and-multi-repo-setup.md
prompts/: README.md  final-release-validation-executable.md  modular-release-review-instruction-set-generation-prompt.md  older-gerneral-qaqc-prompt-library.md
release-review/: 00-run-protocol.md  01-current-state.md  02-quality-security-edge-cases.md  03-tests-regression.md  04-docs-specs-examples.md  05-feature-usability-maintainability.md  06-compatibility-packaging-release.md  07-implementation.md  08-final-ship-review.md  09-release-execution.md  MANIFEST.md  README.md  install-release-review-to-opencode.py  install-release-review-to-opencode.sh  plan-review.md  release-review-validation-report.md
release-review/templates/: execution-plan.md  final-response.md  implementation-plan.md  per-phase-report.md  persona-review.md  section-summary.md
tests/: support.py  test_bench_env.py  test_cli.py  test_comms.py  test_config.py  test_dir_readmes.py  test_discovery.py  test_git_diagnostics.py  test_installer.py  test_leak_sanitizer.py  test_local_leaks.py  test_no_personal_paths.py  test_normalize_plan_names.py  test_packaging.py  test_plan_status.py  test_plans_board.py  test_pypi_links.py  test_run_checks.py  test_scan_secrets.py  test_setup_artifacts.py  test_setup_tools.py  test_term.py  test_versioning.py
tools/: check_personal_paths.py
(+285 files in other folders)
