[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-workflows"
# `readme` is dynamic: a custom metadata hook (hatch_build.py) sets the long-description to
# README.md with relative links rewritten to absolute tag-pinned GitHub URLs so they work on
# PyPI (D-PyPI). The source README.md is never modified. `version` is our git-tag resolver.
dynamic = ["version", "readme"]
description = "Reusable, tool-agnostic agent workflows (review, assess, advise, verify, setup) plus a CLI to install them into any repo."
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{ name = "Gabriele Fariello", email = "gabriele.fariello@gmail.com" }]
keywords = ["agent", "workflows", "code-review", "llm", "cli", "developer-tools"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
]
# Zero runtime dependencies (DECISIONS D44/D46; the whole distribution story rests on
# stdlib-only). Do not add runtime deps without an explicit decision.
dependencies = []

[project.urls]
Homepage = "https://github.com/fariello/agent-workflows"
Repository = "https://github.com/fariello/agent-workflows"
Issues = "https://github.com/fariello/agent-workflows/issues"
Changelog = "https://github.com/fariello/agent-workflows/releases"

# Three console scripts, all -> the same entry point (spec OQ1; collision research).
# If `aw` is already used by another tool on your system, use `agentwf` or `agent-workflows`.
[project.scripts]
agent-workflows = "agent_workflows.cli:main"
aw = "agent_workflows.cli:main"
agentwf = "agent_workflows.cli:main"

# Version comes from our own git-tag-driven resolver via a custom hatch version source
# (hatch_build.py), NOT hatch-vcs - single source of versioning truth, no extra build dep.
[tool.hatch.version]
source = "code"
path = "hatch_build.py"
expression = "VERSION"
search-paths = ["."]

# Custom metadata hook (same hatch_build.py) computes the dynamic `readme` long-description:
# README.md with relative links absolutized to the release tag. Stdlib only (no
# hatch-fancy-pypi-readme build dep, per D46).
[tool.hatch.metadata.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
# The importable package.
packages = ["agent_workflows"]

# Ship the workflow tree as package data WITHOUT moving it in the repo: map the repo-root
# .agents/workflows/ into the wheel under agent_workflows/_data/.agents/workflows/ so the
# 3.8-safe __file__/_data lookup in _compat.packaged_source_root() finds it (OQ5, R-1).
[tool.hatch.build.targets.wheel.force-include]
".agents/workflows" = "agent_workflows/_data/.agents/workflows"

[tool.hatch.build.targets.sdist]
# The sdist carries what a build needs: the package, the data tree, the version hook, and
# the standard metadata files. It deliberately excludes dev/meta content.
include = [
    "/agent_workflows",
    "/.agents/workflows",
    "/hatch_build.py",
    "/pyproject.toml",
    "/README.md",
    "/LICENSE",
    "/NOTICE",
]
